# rockpaperscissors-sim

./: .gitignore  CMakeLists.txt  README.md
include/: Object.h  TextureManager.h
src/: Object.cpp  TextureManager.cpp  main.cpp
